FIX:[Service] add auth middleware
