# api/router/router.go
@@ -7,6 +7,7 @@ import (
 	"github.com/afif-musyayyidin/hertz-boilerplate/api/service"
 	"github.com/afif-musyayyidin/hertz-boilerplate/domain/articles"
 	"github.com/afif-musyayyidin/hertz-boilerplate/domain/authors"
+	"github.com/afif-musyayyidin/hertz-boilerplate/middleware"
 	"github.com/cloudwego/hertz/pkg/app/server"
 	"github.com/jmoiron/sqlx"
 	"github.com/olivere/elastic/v7"
@@ -17,21 +18,24 @@ func SetupRouter(ctx context.Context, h *server.Hertz, db *sqlx.DB, dbReplica *s
 	repoArticles := articles.NewArticleRepo(ctx, db)
 	indexArticles := articles.NewArticleIndexer(es)
 
+	authMiddleware := middleware.AuthMiddleware()
 	svc := service.NewService(ctx, db, repoAuthors, repoArticles, indexArticles)
 	handler := handler.NewAppHandler(svc)
 
 	author := h.Group("/author")
 	{
+		author.POST("/login", handler.LoginAuthor)
 		author.POST("/create", handler.CreateAuthor)
-		author.PUT("/update/:id", handler.UpdateAuthor)
+		author.PUT("/update/:id", authMiddleware, handler.UpdateAuthor)
 	}
 	article := h.Group("/article")
 	{
-		article.POST("/create", handler.CreateArticle)
-		article.POST("/create-bulk", handler.CreateManyArticle)
-		article.PUT("/update/:id", handler.UpdateArticle)
+		article.GET("/all", authMiddleware, handler.GetAllArticle)
+		article.POST("/create", authMiddleware, handler.CreateArticle)
+		article.POST("/create-bulk", authMiddleware, handler.CreateManyArticle)
+		article.PUT("/update/:id", authMiddleware, handler.UpdateArticle)
 		article.GET("/search", handler.GetArticleByKeyWord)
-		article.GET("/author/:id", handler.GetArticleWithAuthorByID)
+		article.GET("/author/:id", authMiddleware, handler.GetArticleWithAuthorByID)
 		article.GET("/author-name", handler.GetArticleByAuthorName)
 	}
 }
